<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/nameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="10dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/create_fragment_name"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nameValueTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="10dp">

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/create_fragment_description"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/descriptionValueTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/importanceLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="10dp">

            <TextView
                android:id="@+id/importanceTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/create_fragment_importance"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/importanceValueTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="left|center"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/icon_image"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1.2"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/creationDateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="10dp">

            <TextView
                android:id="@+id/creationDateTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/creation_date"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/creationDateValueTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/appointmentDateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="10dp">

            <TextView
                android:id="@+id/appointmentDateTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|start"
                android:text="@string/appointment_date"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/appointmentDateValueTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/selectedImageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imgValueImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="0" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
